--- a/gryphon/app/views/pages/profile.html.erb
+++ b/gryphon/app/views/pages/profile.html.erb
@@ -1,5 +1,7 @@
 <h1>Pages#profile</h1>
 
+<h3>Hello <%= current_user.nickname %></h3>
+
 <p>User Profile Page</p>
 
 <%= link_to "Logout", logout_path %>
