Add basic user profile page and retrieved info from github.

--- a/gryphon/app/views/pages/home.html.erb
+++ b/gryphon/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<h1>Pages#home</h1>
+<h1>Gryphon</h1>
 
-<p>Login page</p>
+<h3>Rails Developer Intern Exercise</h3>
 
 
-<%= link_to "Login in / Sign Up", github_auth_path %> 
+<%= link_to "Login in / Sign Up with GitHub", github_auth_path %>
