--- a/gryphon/app/views/pages/home.html.erb
+++ b/gryphon/app/views/pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Gryphon</h1>
-
-<h3>Rails Developer Intern Exercise</h3>
-
-
-<%= link_to "Login in / Sign Up with GitHub", github_auth_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="content">
+        <h1>Gryphon</h1>
+        <h3>Rails Developer Intern Exercise</h3>
+        <hr>
+        <%= button_to github_auth_path, {:class => "btn btn-default btn-lg"} do %>
+          <i class="fa fa-github fa-fw"></i> Log in / Sign up with GitHub
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
