--- a/gryphon/app/assets/stylesheets/application.css
+++ b/gryphon/app/assets/stylesheets/application.css
@@ -60,3 +60,21 @@ hr {
 .user-image {
   width: 50%;
 }
+
+.user-info {
+  font-size: 15px;
+}
+
+.public-repos-list {
+  list-style-type: none;
+  font-size: 15px;
+}
+
+.public-repo-name {
+  font-weight: bold;
+}
+
+.public-repo-language {
+  font-style: italic;
+  font-weight: lighter;
+}
