--- a/gryphon/app/views/pages/profile.html.erb
+++ b/gryphon/app/views/pages/profile.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="content profile">
-        <h2>Welcome <%= @user.name %></h2>
+        <h2>Welcome <%= @user.name %> (<%= current_user.nickname %>)</h2>
       </div>
     </div>
   </div>
@@ -15,20 +15,31 @@
 
     <div class="col-md-7">
       <h3>User profile information</h3>
-      <p>Nickname: <%= current_user.nickname %></p>
-      <p>Email: <%= @user.email %></p>
-      <p>Number of followers: <%= @user.followers %></p>
-      <p>Number of follwoing: <%= @user.following %></p>
-      <p>Number of public repositories: <%= @user.public_repos %></p>
-      <p>Number of repositories: <%= @user.repos.size %></p>
+      <div class="user-info">
+        <p>Email: <%= @user.email %></p>
+        <p>Followers: <%= @user.followers %></p>
+        <p>Follwoing: <%= @user.following %></p>
+        <p>Public repositories: <%= @user.public_repos %></p>
+        <p>Public gists: <%= @user.public_gists %></p>
+        <p>Repositories: <%= @user.repos.size %></p>
+        <p>Location: <%= @user.location %></p>
+        <p>Joined on: <%= @user.created_at.strftime("%b %d, %Y") %></p>
+      </div>
     </div>
   </div>
 
     <div class="row">
-      <h4>Last 10 updated repositories:</h4>
-      <% @user.repos[0..9].each do |repo| %>
-        <%= repo.name %></p>
-      <% end %>
+      <h3>Last 10 updated public repositories:</h3>
+      <ul class="public-repos-list">
+        <% @user.repos[0..9].each do |repo| %>
+          <li>
+            <p>
+              <span class="public-repo-name"><%= repo.name.capitalize %></span>:
+              <span class="public-repo-language"><%= repo.language.capitalize %></span>
+            </p>
+          </li>
+        <% end %>
+      </ul>
     </div>
 
   </div>
