--- a/gryphon/app/views/layouts/application.html.erb
+++ b/gryphon/app/views/layouts/application.html.erb
@@ -29,11 +29,11 @@
           </button>
           <a class="navbar-brand" href="/">Gryphon</a>
         </div>
-        <% if !!current_user %>
+        <% if logged_in? %>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <%= link_to logout_path, {:id => "logout"} do %>
+                <%= link_to logout_path, method: :post, id: 'logout' do %>
                   Logout  <i class="fa fa-user"></i>
                 <% end %>
               </li>
