--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+@import url('//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic'); 
+
 
 body {
   background: url("intro-bg.jpg");
